# InferFramework

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Common.hpp  Utils.hpp
include/data/: CSVDataLoader.hpp  Tensor.hpp
include/layer/abstract/: Layer.hpp  LayerRegisterer.hpp  NonParamLayer.hpp  ParamLayer.hpp
include/layer/deatil/: AdaptiveAveragePoolingLayer.hpp  ConvLayer.hpp  ExpressionLayer.hpp  FlattenLayer.hpp  LinearLayer.hpp  MaxPoolingLayer.hpp  ReluLayer.hpp  SoftmaxLayer.hpp
include/parser/: ExpressionParser.hpp
include/runtime/: Common.hpp  RuntimeAttribute.hpp  RuntimeGraph.hpp  RuntimeOperand.hpp  RuntimeOperator.hpp  RuntimeParameter.hpp
source/: Utils.cpp
source/data/: CSVDataLoader.cpp  Tensor.cpp
source/layer/abstract/: Layer.cpp  LayerRegisterer.cpp  ParamLayer.cpp
source/layer/detail/: AdaptiveAveragePoolingLayer.cpp  ConvLayer.cpp  ExpressionLayer.cpp  FlattenLayer.cpp  LinearLayer.cpp  MaxPoolingLayer.cpp  ReluLayer.cpp  SoftmaxLayer.cpp
source/parser/: ExpressionParser.cpp
source/runtime/: RuntimeGraph.cpp  RuntimeOperator.cpp  ir.cpp  store_zip.cpp
test/: main.cpp  test_conv.cpp  test_expression.cpp  test_graph.cpp  test_layer_registry.cpp  test_load_data.cpp  test_maxpooling.cpp  test_resnet.cpp  test_tensor.cpp  test_topo.cpp
